# SEMAINE-3.1

./: .gitignore  README-examples.txt  README-linux.txt  README-windows.txt  README.txt  VERSION.txt  start.bat  stop.bat
c++/: Doxyfile  Makefile.am  Makefile.in  README.txt  autogen.sh  config.h.in  configure  configure.ac  license.txt
c++/examples/: Makefile.am  README.txt  config.h.in  configure.ac
c++/examples/m4/: semaineapi.m4
c++/m4/: activemqcpp_tools.m4  find_activemqcpp.m4  find_xerces.m4  semaine_config.m4  xerces_tools.m4  xqilla_support.m4
c++/src/: Makefile.am  Makefile.in  main.cpp  semaine.vcproj  vs2005-semaine.sln  vs2005-semaine.vcproj  vs2008-semaine.sln  vs2008-semaine.vcproj
c++/src/semaine/: config.h
c++/src/semaine.xcodeproj/: marc.mode1v3  marc.pbxuser  project.pbxproj
c++/src/semaine/cms/: CMSLogger.cpp  CMSLogger.h  IOBase.cpp  IOBase.h  SEMAINEMessageAvailableListener.h  event.h  loglevel.h
c++/src/semaine/cms/exceptions/: MessageFormatException.h  SEMAINEException.h  SystemConfigurationException.h
c++/src/semaine/cms/message/: SEMAINEBytesMessage.cpp  SEMAINEBytesMessage.h  SEMAINEEmmaMessage.cpp  SEMAINEEmmaMessage.h  SEMAINEFeatureMessage.cpp  SEMAINEFeatureMessage.h  SEMAINEMessage.cpp  SEMAINEMessage.h  SEMAINEStateMessage.cpp  SEMAINEStateMessage.h  SEMAINEXMLMessage.cpp  SEMAINEXMLMessage.h
c++/src/semaine/cms/receiver/: BMLReceiver.h  BytesReceiver.h  EmmaReceiver.h  FMLReceiver.h  FeatureReceiver.h  Receiver.cpp  Receiver.h  StateReceiver.cpp  StateReceiver.h  XMLReceiver.h
c++/src/semaine/cms/sender/: BMLSender.h  BytesSender.cpp  BytesSender.h  EmmaSender.h  FMLSender.h  FeatureSender.cpp  FeatureSender.h  Sender.cpp  Sender.h  StateSender.cpp  StateSender.h  XMLSender.cpp  XMLSender.h
c++/src/semaine/components/: Component.cpp  Component.h
c++/src/semaine/components/control/: ParticipantControl.cpp  ParticipantControl.h
c++/src/semaine/components/dummy/: DummyAnalyser.cpp  DummyAnalyser.h  DummyFML2BML.cpp  DummyFML2BML.h  DummyFeatureExtractor.cpp  DummyFeatureExtractor.h  GenericTestComponent.cpp  GenericTestComponent.h
c++/src/semaine/components/meta/: MetaMessenger.cpp  MetaMessenger.h
c++/src/semaine/datatypes/stateinfo/: AgentStateInfo.h  ContextStateInfo.h  DialogStateInfo.h  NamespaceContext.cpp  NamespaceContext.h  StateInfo.cpp  StateInfo.h  SystemStateInfo.h  UserStateInfo.h  XPathInfoMapper.cpp  XPathInfoMapper.h
c++/src/semaine/datatypes/xml/: BML.cpp  BML.h  EMMA.cpp  EMMA.h  EmotionML.cpp  EmotionML.h  FML.cpp  FML.h  SSML.cpp  SSML.h  SemaineML.cpp  SemaineML.h
c++/src/semaine/executables/: basictests.cpp  dummyanalyser.cpp  dummyfeatextr.cpp  dummyfml2bml.cpp  jimandjohn.cpp  participantctrl.cpp  testStateInfo.cpp
c++/src/semaine/system/: ComponentRunner.cpp  ComponentRunner.h
c++/src/semaine/util/: ParseErrorHandler.h  XMLTool.cpp  XMLTool.h
c++/src/tum/asr/: ASR.cpp  ASR.h  COPYING  Makefile.am  asr.cfg  asrtum.cpp  configure.ac  pipelist.txt  start_asr_component.sh
c++/src/tum/asr/m4/: atklib.m4  find_pthread.m4
c++/src/tum/asr/src/: ASR.cpp  ASR.h  asrtum.cpp  atk_v001.patch
c++/src/tum/aux/: AWSA.list  kw.voca  kws.cfg  opensmileSemaine.conf
c++/src/tum/auxiliary/: AWSA.list  emoFt_bufSize.conf  emoFt_frameMode.conf  keyword.weights  kw.voca  kws.cfg  loebner.voca  loebnerKW.txt  opensmileSemaine.conf  opensmileSemaine3.conf  opensmileSemaine3a.conf  opensmileSemaineAPI.conf  opensmileSemaineASR.conf  opensmileSemaineASRft.conf  opensmileSemaineASRms.conf  opensmileSemaineAudioIn.conf  opensmileSemaineEmo.conf  opensmileSemaineEmoftAc.conf  opensmileSemaineProsody.conf  opensmileSemaineVAD2.conf  opensmileSemaineVADsimple.conf  opensmileSemaineVad.conf  semaine.voca  semaineKW.txt  sil.model  sil.model.nocms  voice.model  voice.model.nocms
c++/src/tum/auxiliary/conf/: opensmileSemaine3a.conf  opensmileSemaine3a_offline.conf  opensmileSemaineAPI.conf  opensmileSemaineASR.conf  opensmileSemaineASRft.conf  opensmileSemaineASRms.conf  opensmileSemaineAudioIn.conf  opensmileSemaineEmo.conf  opensmileSemaineEmoftAc.conf  opensmileSemaineEmoftLng.conf  opensmileSemaineIntA.conf  opensmileSemaineIntB.conf  opensmileSemaineIntC.conf  opensmileSemaineParaling.conf  opensmileSemaineProsody.conf  opensmileSemaineVAD2.conf  opensmileSemaineVAD3.conf  opensmileSemaineVADoffline.conf  opensmileSemaineVADsimple.conf  opensmileSemaineVad.conf  opensmileSemaineWaveIn.conf  semaine3.0_emoaudio.conf
c++/src/tum/auxiliary/models/: README.emotionModels.txt
c++/src/tum/julius4.mod/: README  jconf.h  jfunc.c  m_info.c  m_jconf.c  plugin.c  realtime-1stpass.c  recog.h  recogmain.c  search_bestfirst_v1.c  spsegment.c  vocabulary.h  vsegment.c  winpatch.bat  word_align.c
c++/src/tum/opensmile/: AUTHORS  CITING.txt  COPYING  CREDITS  ChangeLog  INSTALL  Makefile.am  NEWS  README  buildStandalone.sh  buildWithInstalledPortAudio.sh  buildWithJulius.sh  buildWithPortAudio.sh  configure.ac
c++/src/tum/smile/: AMQoutput.cpp  AMQoutput.hpp  AUTHORS  CITING.txt  INSTALL  Makefile  Makefile.am  NEWS  README  TumFeatureExtractor.cpp  TumFeatureExtractor.h  autogen.sh  configure.ac  featum.cpp  start_smile_component.sh
c++/src/tum/smile/src/: LLDs.c  (+99 more)
c++/vs2005/: ButtonTracker.sln  ButtonTracker.vcproj  MouseHook.vcproj  SemaineAPIDependencies.vsprops  SemaineAPIDependenciesDebug.vsprops  UpgradeLog.XML  basictests.vcproj  dummyanalyser.vcproj  dummyfeatextr.vcproj  dummyfml2bml.vcproj  jimandjohn.vcproj  participantcontrol.vcproj  semaine.sln  semaineF.sln  semaineLibs.vsprops  semaineapi.vcproj  semaineapiF.vcproj
c++/vs2005/depends/: README.txt
c++/vs2005/depends/lib/: apr-1.lib  aprutil-1.lib  libapr-1.lib  libaprutil-1.lib  xerces-c_3.lib  xerces-c_3D.lib  xqilla22.lib  xqilla22d.lib
c++/vs2005/src/: ButtonTracker.cpp  MouseHook.cpp  MouseHook.h
c++/vs2010/: SemaineAPIDependencies.props  SemaineAPIDependenciesDebug.props  basictests.vcxproj  dummyanalyser.vcxproj  dummyfeatextr.vcxproj  dummyfml2bml.vcxproj  jimandjohn.vcxproj  participantcontrol.vcxproj  semaine.sln  semaineapi.vcxproj
(+3370 files in other folders)
