# Input to autoconf

AC_INIT([semaine],1)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([src/semaine/cms/IOBase.cpp])

AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_HEADERS([config.h])


# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE


AM_SANITY_CHECK
AC_LANG_CPLUSPLUS

# Our dependencies:
# APR and APR-Util are needed by ActiveMQ-CPP:
DECAF_CONFIGURE_APR
# ActiveMQ-CPP:
ACTIVEMQCPP_CONFIGURE_ACTIVEMQCPP
# Xerces:
XERCES_CONFIGURE_XERCES

SEMAINE_CXXFLAGS="$ACTIVEMQCPP_CFLAGS $APR_CPPFLAGS $APR_INCLUDES $APU_INCLUDES $XERCES_CFLAGS"
#SEMAINE_LIBS="$ACTIVEMQCPP_LIBS $ACTIVEMQCPP_LDFLAGS $APR_LIBS $APR_LDFLAGS $APU_LIBS $APU_LDFLAGS"
SEMAINE_LDFLAGS="$ACTIVEMQCPP_LIBS $ACTIVEMQCPP_LDFLAGS $APR_LDFLAGS $APU_LDFLAGS $XERCES_LDFLAGS $XERCES_LIBS"

## Flags for building the semaine code ##
AC_SUBST([SEMAINE_CXXFLAGS])
AC_SUBST([SEMAINE_LDFLAGS])


AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])
AC_OUTPUT







